# rag-ebook-search

./: .env.example  .gitignore  Containerfile  LICENSE  README.md  compose.yaml  pyproject.toml  tox.ini
requirements/: test.txt
src/rag_ebook_search/: __init__.py  config.py  database.py  exceptions.py  logging_config.py  main.py  models.py  schemas.py  streamlit_app.py
src/rag_ebook_search/adapters/: __init__.py  document_loader.py  embedding.py  llm.py  rag_chain.py  vector_store.py
src/rag_ebook_search/ports/: __init__.py  document_loader.py  embedding.py  llm.py  rag_chain.py  vector_store.py
src/rag_ebook_search/routers/: __init__.py  books.py  rag.py  search.py
src/rag_ebook_search/services/: __init__.py  container.py  fastapi_deps.py
src/rag_ebook_search/use_cases/: __init__.py  rag.py  search.py  upload.py
tests/: __init__.py
tests/integration/: __init__.py  conftest.py  test_api_integration.py  test_books_integration.py
tests/unit/: conftest.py  test_books.py  test_rag.py  test_search.py
